field-forms/objects/FieldForms_Configuration__c/FieldForms_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Handles configuration attributes of FieldForms</description>
    <label>FieldForms Configuration</label>
</CustomObject>