field-forms/objects/FieldForms_Configuration__c/fields/Disable_Form_Template_JSON_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Form_Template_JSON_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the form templates compiling the JSON of the pages, sections, questions and conditions. This should be used during import and export exercises when dealing with large forms.</description>
    <inlineHelpText>Disables the form templates compiling the JSON of the pages, sections, questions and conditions. This should be used during import and export exercises when dealing with large forms.</inlineHelpText>
    <label>Disable Form Template JSON Trigger</label>
    <type>Checkbox</type>
</CustomField>