field-forms/objects/FieldForms_Configuration__c/fields/Enable_AI_Features__c.field-meta.xml
<CustomField>
    <fullName>Enable_AI_Features__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt-in gate for AI-assisted authoring features (e.g. generate form from prompt). Requires the org to have Agentforce enabled and the running user to have access to the Agentforce Models API. Off by default so customers without Agentforce do not see a broken AI button.</description>
    <inlineHelpText>Turn on AI-assisted form authoring. Requires Agentforce in the org.</inlineHelpText>
    <label>Enable AI Features</label>
    <type>Checkbox</type>
</CustomField>